; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_activate_ad.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_activate_ad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.advert = type { i32*, i32, i32, i32 }

@User = common dso_local global %struct.TYPE_4__** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.advert*)* @activate_ad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @activate_ad(%struct.advert* %0) #0 {
  %2 = alloca %struct.advert*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  store %struct.advert* %0, %struct.advert** %2, align 8
  %9 = load %struct.advert*, %struct.advert** %2, align 8
  %10 = getelementptr inbounds %struct.advert, %struct.advert* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.advert*, %struct.advert** %2, align 8
  %14 = getelementptr inbounds %struct.advert, %struct.advert* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %12, i64 %16
  store i32* %17, i32** %4, align 8
  %18 = load %struct.advert*, %struct.advert** %2, align 8
  %19 = getelementptr inbounds %struct.advert, %struct.advert* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %5, align 4
  %21 = load %struct.advert*, %struct.advert** %2, align 8
  %22 = getelementptr inbounds %struct.advert, %struct.advert* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 8
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %49, %1
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = icmp ult i32* %25, %26
  br i1 %27, label %28, label %50

28:                                               ; preds = %24
  %29 = load i32*, i32** %3, align 8
  %30 = getelementptr inbounds i32, i32* %29, i32 1
  store i32* %30, i32** %3, align 8
  %31 = load i32, i32* %29, align 4
  store i32 %31, i32* %7, align 4
  %32 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @User, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %32, i64 %34
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  store %struct.TYPE_4__* %36, %struct.TYPE_4__** %8, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %38 = icmp ne %struct.TYPE_4__* %37, null
  br i1 %38, label %39, label %49

39:                                               ; preds = %28
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* %6, align 4
  %44 = icmp sle i32 %42, %43
  br i1 %44, label %45, label %49

45:                                               ; preds = %39
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %47 = load i32, i32* %5, align 4
  %48 = call i32 @activate_one_user_ad(%struct.TYPE_4__* %46, i32 %47)
  br label %49

49:                                               ; preds = %45, %39, %28
  br label %24

50:                                               ; preds = %24
  ret void
}

declare dso_local i32 @activate_one_user_ad(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
